scrollbar ui fix 2

--- a/newtab.css
+++ b/newtab.css
@@ -150,7 +150,7 @@ h2 {
     #sidebar.collapsed {
         min-width: 80px;
         width: 80px;
-        padding-right: 4px;
+        padding-right: 0px;
         overflow: hidden;
     }
     #sidebar.no-transition {
@@ -235,8 +235,9 @@ h2 {
     width: 100%;
     box-sizing: border-box;
     user-select: none;
+    -webkit-user-select: none;
 }
-    .tab-item.collapsed{
+    .tab-item.collapsed {
         max-width: 48px;
     }
     .tab-item.subgroup-item {
@@ -398,6 +399,8 @@ h2 {
     list-style-type: none;
     overflow-y: auto;
     overflow-x: hidden;
+    user-select: none;
+    -webkit-user-select: none;
 }
     .column:not(.dragging) {
         transition: all 0.3s ease;
@@ -437,6 +440,7 @@ h2 {
     .column-title-text {
         display: inline;
         user-select: none;
+        -webkit-user-select: none;
         overflow: hidden;
         white-space: nowrap;
         text-overflow: ellipsis;
